<resources>
    <string name="app_name">Media Timer</string>
    <string name="startTimerButton_string">Start Timer</string>
    <string name="timerValue">00:00:00</string>
    <string name="hours_string"></string>
    <string name="minutes_string"></string>
    <string name="seconds_string"></string>
    <string name="hints">00</string>
    <string name="separator_string">:</string>
    <string name="pauseTimer_string">Pause Timer</string>
    <string name="unpauseTimer_string">Unpause Timer</string>
    <string name="uploadImageButton_string">Upload Image</string>
    <string name="uploadTimerButton_string">Upload Timer</string>
    <string name="stopAlarm_string">Stop Alarm</string>
    <string name="enable_notifications">Notification Options</string>

    <string name="number_of_intervals">Number of intervals:</string>
    <string name="number_of_intervals_default">1</string>
    <string name="timer_format">Timer Format:</string>
    <string name="save">Save</string>
    <string name="add_timer">Add Timer</string>
    <string name="title_activity_common_page">common_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="group_timers">Group Timers</string>
    <string name="name_your_new_group">Name your new group</string>
    <string name="placeholder_desc">NO DESC</string>
    <string name="group_name">Group Name(N of timers)</string>
    <string name="edit_text_indicator">edit text indicator</string>
    <string name="timer_s_name">Timer Name</string>
    <string name="separator1">H</string>
    <string name="separator2">M</string>
    <string name="separator3">S</string>
    <string name="add_media">Add Media</string>
    <string name="create_timer_options">Create timer</string>

    <string name="create_group_options">Create group</string>
    <string name="give_a_name">Give a name</string>
    <string name="group_name_hint">Group Name</string>
    <string name="change_theme">Change Theme</string>
    <string name="choose_file">Choose file</string>
    <string name="image_to_add">Image to add</string>
    <string name="upload">Upload</string>
    <string name="show_uploads">Show Uploads</string>
    <string name="enter_file_name">Enter file name</string>
    <string name="choose_interval_type">Interval type</string>
    <string name="choose_sound">Choose Sound</string>
    <string name="metric_example">s</string>
    <string name="uploaded_image">uploaded image</string>
    <string name="name">Name</string>
    <string name="define_intervals_by_number">Define intervals by number</string>
    <string name="random_intervals">Random intervals</string>
    <string name="define_intervals_by_time">Define intervals by time</string>
    <string name="time_between_intervals">Time between Intervals:</string>
    <string name="sounds">Sounds</string>
    <string name="enable_random_intervals">Enable random intervals</string>
    <string name="choose_your_theme">Choose your theme</string>
    <string name="blue_grey_text">Blue/Grey</string>
    <string name="orange_text">Orange</string>
    <string name="green_text">Green</string>
    <string name="red_black_text">Red</string>
    <string name="black_text">Black</string>
    <string name="max_number_of_intervals">Max number of intervals:</string>
    <string name="min_number_of_intervals">Min number of intervals:</string>
    <string name="vibration">Vibration</string>
    <string name="enable_vibration">Enable vibration</string>
    <string name="no_intervals_notification">No Intervals</string>
    <string name="time_notification">Timed Intervals</string>
    <string name="number_notification">Number of Intervals</string>
    <string name="random_notification">Random Intervals</string>
    <string name="favourites">Favourites</string>
    <string name="create">Create</string>
    <string name="options">Options</string>
    <string name="choose_your_language">Choose your language</string>
    <string name="mode1">HH/MM/SS</string>

</resources>