<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#A6A6A6"
    tools:context=".timerFragment">

    <Button
        android:id="@+id/stopAlarmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/stopAlarm_string"
        android:textSize="12sp"
        android:visibility="invisible"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/pauseUnpauseButton"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/startTimerButton"
        app:layout_constraintTop_toBottomOf="@+id/pauseUnpauseButton" />

    <Button
        android:id="@+id/pauseUnpauseButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/pauseTimer_string"
        android:textSize="12sp"
        android:visibility="invisible"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/secondsEditView"
        app:layout_constraintStart_toStartOf="@+id/hoursEditView"
        app:layout_constraintTop_toBottomOf="@+id/startTimerButton" />

    <Button
        android:id="@+id/startTimerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/startTimerButton_string"
        android:textSize="12sp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/secondsEditView"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/hoursEditView"
        app:layout_constraintTop_toBottomOf="@+id/minutesEditView" />

    <Button
        android:id="@+id/uploadTimerButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/uploadTimerButton_string"
        android:textSize="12sp"
        android:backgroundTint="@color/red"
        app:layout_constraintEnd_toEndOf="@+id/stopAlarmButton"
        app:layout_constraintStart_toStartOf="@+id/stopAlarmButton"
        app:layout_constraintTop_toBottomOf="@+id/stopAlarmButton" />

    <EditText
        android:id="@+id/secondsEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hints"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/seconds_string"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/separator2"
        app:layout_constraintTop_toTopOf="@+id/separator2" />

    <EditText
        android:id="@+id/minutesEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:hint="@string/hints"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/minutes_string"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/separator1"
        app:layout_constraintTop_toTopOf="@+id/separator1" />

    <EditText
        android:id="@+id/hoursEditView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:hint="@string/hints"
        android:importantForAutofill="no"
        android:inputType="number"
        android:text="@string/hours_string"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/separator2"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/separator_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/minutesEditView"
        app:layout_constraintEnd_toStartOf="@+id/secondsEditView"
        app:layout_constraintStart_toEndOf="@+id/minutesEditView"
        app:layout_constraintTop_toTopOf="@+id/minutesEditView" />

    <TextView
        android:id="@+id/separator1"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:text="@string/separator_string"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/hoursEditView"
        app:layout_constraintEnd_toStartOf="@+id/minutesEditView"
        app:layout_constraintStart_toEndOf="@+id/hoursEditView"
        app:layout_constraintTop_toTopOf="@+id/hoursEditView"
        app:layout_constraintVertical_bias="1.0" />

</androidx.constraintlayout.widget.ConstraintLayout>